--- a/a-test/index.html
+++ b/a-test/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 <a-entity light="type: ambient; color: #BBB"></a-entity>
-<a-entity light="type: directional; color: #FFF; intensity: 0.6" position="-0.5 1 1"></a-entity>
+<a-entity light="type: directional; color: #FFF; intensity: 0.6" position="-0.5 1 1">
     <a-scene>
       <a-plane position="0 0 -6" rotation="-90 0 0" width="4" height="4" color="#FF8C8E"></a-plane><!--coral ground-->
       <a-plane position="-2 1 -6" rotation="0 90 0" width="4" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
@@ -24,5 +24,6 @@
       <a-plane position="0 1 -8" rotation="0 0 0" width="4" height="2" color="#FABA00"></a-plane><!--orange back-->
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
+  </a-entity>
   </body>
 </html>
