--- a/a-test/index.html
+++ b/a-test/index.html
@@ -17,6 +17,9 @@
   <body>
 
     <a-scene fog="type: linear; color: #AAA">
+      <a-assets>
+          <img id="waterfall" src="images/waterfall.jpg">
+      </a-assets>
       <a-plane position="0 0 -6" rotation="-90 0 0" width="4" height="4" color="#FF8C8E"></a-plane><!--coral ground-->
       <a-plane position="-2 1 -6" rotation="0 90 0" width="4" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
       <a-plane position="2 1 -6" rotation="0 -90 0" width="4" height="2" color="#B6D806"></a-plane><!--lime right wall-->
