--- a/a-test/index.html
+++ b/a-test/index.html
@@ -18,7 +18,7 @@
 
     <a-scene fog="type: linear; color: #AAA">
       <a-assets>
-          <img id="waterfall" src="images/waterfall.jpg">
+          <img id="waterfall" src="images/waterfall-300x400.jpg" width="400" height="300">
       </a-assets>
       <a-plane position="0 0 -6" rotation="-90 0 0" width="4" height="4" color="#FF8C8E"></a-plane><!--coral ground-->
       <a-plane position="-2 1 -6" rotation="0 90 0" width="4" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
