--- a/a-test/index.html
+++ b/a-test/index.html
@@ -21,7 +21,7 @@
           <img id="waterfall" src="images/waterfall-300x400.jpg" width="400" height="300">
       </a-assets>
       
-      <a-image src="#waterfall"></a-image>
+      <a-image src="#waterfall" position="0 1 -8"></a-image>
       <a-plane position="0 0 -6" rotation="-90 0 0" width="4" height="4" color="#FF8C8E"></a-plane><!--coral ground-->
       <a-plane position="-2 1 -6" rotation="0 90 0" width="4" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
       <a-plane position="2 1 -6" rotation="0 -90 0" width="4" height="2" color="#B6D806"></a-plane><!--lime right wall-->
