--- a/a-test/index.html
+++ b/a-test/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 
-    <a-scene fog="type: linear; color: #AAA">
+    <a-scene>
       <a-assets>
           <img id="waterfall" src="images/waterfall-300x400.jpg" width="400" height="300">
       </a-assets>
