--- a/a-test/index.html
+++ b/a-test/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
       <title>What's a Porfir.io?</title>
+<meta property="og:type" content="business.business">
+<meta property="og:title" content="A-Test of A-Frame - WebVR - What's a Porfirio?">
+<meta property="og:url" content="http://porfir.io/a-test">
+<meta property="og:image" content="http://porfir.io/a-test/images/a-test-preview.png">
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
