--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -18,12 +18,21 @@
 
     <a-scene>
       
-      <a-plane position="0 0 -5" rotation="-90 0 0" width="4" height="5" color="#FF8C8E"></a-plane><!--coral living room ground-->
-      <a-plane position="-2 1 -4" rotation="0 90 0" width="3" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
-      <a-plane position="2 1 -4.25" rotation="0 -90 0" width="1.5" height="2" color="#B6D806"></a-plane><!--lime right wall-->
-      <a-plane position="1.5 1 -6" rotation="0 0 0" width="3" height="2" color="#FABA00"></a-plane><!--orange kitchen wall-->
-      <a-plane position=".5 .3 -7.5" rotation="0 0 0" width="5" height=".7" color="#B0B2E9"></a-plane><!--lilac back outside-->
-      <a-plane position="2.5 0 -5.5" rotation="-90 0 0" width="1" height="4" color="#FF8C8E"></a-plane><!--coral ground-->
+<!--// Floor plan scale -->
+
+<!--// First floor -->
+<a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
+
+<!--// Left wall -->
+<a-plane position="-2 1 -4" rotation="0 90 0" width="3" height="2" color="#82D1F5"></a-plane><!--cyan left wall-->
+
+<!--// Back wall -->
+
+<!--// Front wall -->
+
+<!--// Right wall -->
+
+<!--// Kitchen wall -->
 
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
