--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -19,7 +19,8 @@
     <a-scene position="0 0 -5">
       
 <!--// Floor plan scale -->
-
+<a-entity id="floorPlan" position="0 0 -5">
+  
 <!--// First floor -->
 <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
 
@@ -33,6 +34,9 @@
 <!--// Right wall -->
 
 <!--// Kitchen wall -->
+  
+  
+  </a-entity>
 
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
