--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -25,7 +25,7 @@
 <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
 
 <!--// Left wall -->
-<a-plane position="-1.5 .5 -.5" rotation="0 90 0" width="2" height="1" color="#82D1F5"></a-plane><!--cyan left wall-->
+<a-plane position="-1.5 .5 -1" rotation="0 90 0" width="2" height="1" color="#82D1F5"></a-plane><!--cyan left wall-->
 
 <!--// Back wall -->
 
