--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -28,6 +28,7 @@
 <a-plane position="-1.5 .25 .5" rotation="0 90 0" width="2" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
 
 <!--// Back wall -->
+<a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9"></a-plane><!--lilac back outside-->
 
 <!--// Front wall -->
 
