--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -35,6 +35,7 @@
 <!--// Right wall -->
 
 <!--// Kitchen wall -->
+<a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height="2" color="#FABA00"></a-plane><!--orange kitchen wall-->
   
   
   </a-entity>
