--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -31,6 +31,7 @@
 <a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9"></a-plane><!--lilac back outside-->
 
 <!--// Front wall -->
+<a-plane position="-1.5 .25 -1.5" rotation="0 0 0" width="2" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
 
 <!--// Right wall -->
 
