--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -35,7 +35,7 @@
 <a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
 
 <!--// Right wall -->
-  <a-plane position="1 .25 1" rotation="0 -90 0" width="1" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
+  <a-plane position="1 .25 .5" rotation="0 -90 0" width="1" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
 
 <!--// Kitchen wall -->
 <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
