--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -42,9 +42,9 @@
 <!--// right wall -->
 <a-plane position="1.5 .25 -.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
   
-<!--// Kitchen wall -->
+<!--// Kitchen walls -->
 <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
-  
+<a-plane position="-1.5 .25 -.75" rotation="0 90 0" width=".25" height=".5" color="#B6D806"></a-plane><!--orange kitchen wall-->  
   
   </a-entity>
 
