--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>A-Partment - VR Tour of an Apartment</title>
+    <title>A-Partment - VR Tour of an Apartment</title>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-99747601-1', 'auto');
-  ga('send', 'pageview');
-
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                              })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-99747601-1', 'auto');
+      ga('send', 'pageview');
     </script>
-<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
   <body>
 
     <a-scene position="0 0 -5">
-      
-<!--// Floor plan scale -->
-<a-entity id="floorPlan" position="0 0 -5">
-  
-<!--// First floor -->
-<a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
 
-<!--// Left wall -->
-<a-plane position="-1.5 .25 .5" rotation="0 90 0" width="2" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
+      <!--// Floor plan scale -->
+      <a-entity id="floorPlan" position="-0.96 0.98 -5">
 
-<!--// Back wall -->
-<a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9"></a-plane><!--lilac back outside-->
+        <!--// First floor -->
+        <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
 
-<!--// Front wall -->
-<a-plane position="-.5 .25 1.5" rotation="0 0 0" width="2" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
-<a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
+        <!--// Left wall -->
+        <a-plane position="-1.5 .25 .5" rotation="0 90 0" width="2" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
 
-<!--// Bathroom walls -->
-<a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
-<a-plane position="1 .25 .62" rotation="0 -90 0" width=".75" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
-<a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806"></a-plane><!--lime wall-->
-  
-<!--// right wall -->
-<a-plane position="1.5 .25 -.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
-  
-<!--// Kitchen walls -->
-<a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
-<a-plane position="-.5 .25 -.63" rotation="0 90 0" width=".25" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->  
-  
-  </a-entity>
+        <!--// Back wall -->
+        <a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9"></a-plane><!--lilac back outside-->
+
+        <!--// Front wall -->
+        <a-plane position="-.5 .25 1.5" rotation="0 0 0" width="2" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
+        <a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
+
+        <!--// Bathroom walls -->
+        <a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
+        <a-plane position="1 .25 0.63" rotation="0 -90 0" width=".75" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
+        <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806"></a-plane><!--lime wall-->
+
+        <!--// right wall -->
+        <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
+
+        <!--// Kitchen walls -->
+        <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
+        <a-plane position="-.5 .25 -0.63" rotation="0 90 0" width=".25" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->  
+
+      </a-entity>
 
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
