--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -33,9 +33,9 @@
         <a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
 
         <!--// Bathroom walls -->
-        <a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
-        <a-plane position="1 .25 0.63" rotation="0 -90 0" width=".75" height=".5" color="#B6D806"></a-plane><!--lime right wall-->
-        <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806"></a-plane><!--lime wall-->
+        <a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806" side="double"></a-plane><!--lime right wall-->
+        <a-plane position="1 .25 0.63" rotation="0 -90 0" width=".75" height=".5" color="#B6D806" side="double"></a-plane><!--lime right wall-->
+        <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806" side="double"></a-plane><!--lime wall-->
 
         <!--// right wall -->
         <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
