--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -38,7 +38,7 @@
         <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806" side="double"></a-plane><!--lime wall-->
 
         <!--// right wall -->
-        <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
+        <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
 
         <!--// Kitchen walls -->
         <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
