--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -20,17 +20,17 @@
       <a-entity id="floorPlan" position="-1 1 -2.5">
 
         <!--// First floor -->
-        <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E"></a-plane>
+        <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E" side="double"></a-plane>
 
         <!--// Left wall -->
-        <a-plane position="-1.5 .25 .5" rotation="0 90 0" width="2" height=".5" color="#82D1F5"></a-plane><!--cyan left wall-->
+        <a-plane position="-1.5 .25 .5" rotation="0 90 0" width="2" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
 
         <!--// Back wall -->
-        <a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9"></a-plane><!--lilac back outside-->
+        <a-plane position="0 .25 -1.5" rotation="0 0 0" width="3" height=".5" color="#B0B2E9" side="double"></a-plane><!--lilac back outside-->
 
         <!--// Front wall -->
-        <a-plane position="-.5 .25 1.5" rotation="0 0 0" width="2" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
-        <a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9"></a-plane><!--lilac front-->
+        <a-plane position="-.5 .25 1.5" rotation="0 0 0" width="2" height=".5" color="#B0B2E9" side="double"></a-plane><!--lilac front-->
+        <a-plane position="1.25 .25 1.5" rotation="0 0 0" width=".5" height=".5" color="#B0B2E9" side="double"></a-plane><!--lilac front-->
 
         <!--// Bathroom walls -->
         <a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806" side="double"></a-plane><!--lime right wall-->
@@ -41,8 +41,8 @@
         <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
 
         <!--// Kitchen walls -->
-        <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->
-        <a-plane position="-.5 .25 -0.63" rotation="0 90 0" width=".25" height=".5" color="#FABA00"></a-plane><!--orange kitchen wall-->  
+        <a-plane position=".5 .25 -.5" rotation="0 0 0" width="2" height=".5" color="#FABA00" side="double"></a-plane><!--orange kitchen wall-->
+        <a-plane position="-.5 .25 -0.63" rotation="0 90 0" width=".25" height=".5" color="#FABA00" side="double"></a-plane><!--orange kitchen wall-->  
 
       </a-entity>
 
