--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -15,6 +15,11 @@
   <body>
 
     <a-scene position="0 0 -5">
+  <a-assets>
+    <a-asset-item id="donut-obj" src="/images/donut_model.obj"></a-asset-item>
+  </a-assets>
+      
+      <a-entity obj-model="obj: #donut-obj"></a-entity>
 
       <!--// Floor plan scale -->
       <a-entity id="floorPlan" position="-1 1 -2.5">
