--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -16,7 +16,7 @@
 
     <a-scene position="0 0 -5">
   <a-assets>
-    <a-asset-item id="donut-obj" src="/images/donut_model.obj"></a-asset-item>
+    <a-asset-item id="donut-obj" src="images/donut_model.obj"></a-asset-item>
   </a-assets>
       
       <a-entity obj-model="obj: #donut-obj"></a-entity>
