--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -19,7 +19,7 @@
     <a-asset-item id="donut-obj" src="images/donut_model.obj"></a-asset-item>
   </a-assets>
       
-      <a-entity obj-model="obj: #donut-obj"></a-entity>
+      <a-entity obj-model="obj: #donut-obj" position="0 2 -3" rotation="-90 0 0"></a-entity>
 
       <!--// Floor plan scale -->
       <a-entity id="floorPlan" position="-1 1 -2.5">
