--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
   ga('send', 'pageview');
 
     </script>
+    <style>
+#container{
+  grid-template-columns: auto 50px 50px 50px auto;
+  grid-template-rows: 25% 100px auto;
+}
+    </style>
   </head>
 <body>
 <h1>what's a porfir.io?</h1>
 <p>He's hosted with GitHub Pages.</p>
+  
+<div id="container">
+  <div>auto</div>
+  <div>LinkedIn</div>
+  <div>Twitter</div>
+  <div>Instagram</div>
+  <div>auto</div>
+  <div>auto</div>
+  <div>CSS Grid</div>
+  <div>A-Frame</div>
+  <div>A-Partment</div>
+  <div>auto</div>
+</div>  
+  
+  
 </body>
 </html>
