--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 
     </script>
     <style>
-#container{
-  grid-template-columns: auto 50px 50px 50px auto;
-  grid-template-rows: 25% 100px auto;
+#container {
+  display: grid;
+  grid: repeat(2, 60px) / auto-flow 80px;
+}
+
+#container > div {
+  background-color: #8ca0ff;
+  width: 50px;
+  height: 50px;
 }
     </style>
   </head>
