--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
 #container {
   display: grid;
-  grid: repeat(2, 160px) / auto-flow 180px;
+  grid-template-columns: 200px 200px 200px;
 }
 
 #container > div {
