--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
 #container {
   display: grid;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-columns: auto 200px 200px 200px auto;
 }
 
 #container > div {
