--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 }
 
 #container > div {
-  background-color: #8ca0ff;
+  height: 200px;
 }
+      .tile }
+      background-color: #8ca0ff;
+      }
     </style>
   </head>
 <body>
