--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   
 <div id="container">
   <div>auto</div>
-  <div>LinkedIn</div>
-  <div>Twitter</div>
-  <div>Instagram</div>
+  <div class="tile">LinkedIn</div>
+  <div class="tile">Twitter</div>
+  <div class="tile">Instagram</div>
   <div>auto</div>
   <div>auto</div>
-  <div>CSS Grid</div>
-  <div>A-Frame</div>
-  <div>A-Partment</div>
+  <div class="tile">CSS Grid</div>
+  <div class="tile">A-Frame</div>
+  <div class="tile">A-Partment</div>
   <div>auto</div>
 </div>  
   
