--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 #container > div {
   height: 200px;
 }
-      .tile }
-      background-color: #8ca0ff;
-      }
+
     </style>
   </head>
 <body>
@@ -35,7 +33,7 @@
   <div>LinkedIn</div>
   <div>Twitter</div>
   <div>Instagram</div>
-  <div>>CSS Grid</div>
+  <div>CSS Grid</div>
   <div>A-Frame</div>
   <div>A-Partment</div>
 </div>  
