--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
     background-color: #fff9db;
     padding: 1em;
 }
-
-
     </style>
   </head>
 <body>
 <h1>what's a porfir.io?</h1>
 <p>He's hosted with GitHub Pages.</p>
   
-<div class="container">
+<div class="wrapper">
   <div>LinkedIn</div>
   <div>Twitter</div>
   <div>Instagram</div>
