--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <style>
 .wrapper {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
 }
 * {box-sizing: border-box;}
 .wrapper {
