--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
     background-color: #fff9db;
     padding: 1em;
 }
+.one {
+  grid-column: 1;
+  grid-row: 1;
+}
+.two { 
+  grid-column: 2;
+  grid-row: 1;
+}
+.three {
+  grid-row: 3;
+  grid-column: 1;
+}
+.four {
+  grid-column: 1;
+  grid-row: 2;
+}
+.five {
+  grid-column: 2;
+  grid-row: 2;
+}
+.six {
+  grid-column: 3;
+  grid-row: 2;
+}
     </style>
   </head>
 <body>
@@ -45,12 +69,12 @@
 <p>He's hosted with GitHub Pages.</p>
   
 <div class="wrapper">
-  <div>LinkedIn</div>
-  <div>Twitter</div>
-  <div>Instagram</div>
-  <div>CSS Grid</div>
-  <div>A-Frame</div>
-  <div>A-Partment</div>
+  <div class="one">LinkedIn</div>
+  <div class="two">Twitter</div>
+  <div class="three">Instagram</div>
+  <div class="four">CSS Grid</div>
+  <div class="give">A-Frame</div>
+  <div class="six">A-Partment</div>
 </div>  
   
   
