--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     border-radius: 5px;
     background-color: #fff9db;
     padding: 1em;
+  text-align: center;
+  vertical-align: middle;
 }
 .one {
   grid-column: 1;
