--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="two">Twitter</div>
   <div class="three">Instagram</div>
   <div class="four">CSS Grid</div>
-  <div class="give">A-Frame</div>
+  <div class="five">A-Frame</div>
   <div class="six">A-Partment</div>
 </div>  
   
