--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <a-scene position="0 0 -1.4">
+    <a-scene position="0 0 -1.4" vr-mode-ui="enabled: false">
   <a-assets>
     <a-asset-item id="donut-obj" src="images/donut_model.obj"></a-asset-item>
   </a-assets>
