--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -16,10 +16,10 @@
 
     <a-scene position="0 0 -1.4" vr-mode-ui="enabled: false">
   <a-assets>
-    <a-asset-item id="donut-obj" src="images/donut_model.obj"></a-asset-item>
+    <a-asset-item id="toilet-obj" src="images/Toilet.obj"></a-asset-item>
   </a-assets>
       
-      <!--<a-entity obj-model="obj: #donut-obj" position="0 3 -3" rotation="90 0 0"></a-entity>-->
+      <a-entity obj-model="obj: #toilet-obj" position="0 3 -3" rotation="0 0 0" width="1" height="1"></a-entity>
 
       <!--// Floor plan scale -->
       <a-entity id="floorPlan" position="0 1 0">
