--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -22,7 +22,7 @@
      
 
       <!--// Floor plan scale -->
-      <a-entity id="floorPlan" position="-.5 1 0">
+      <a-entity id="floorPlan" position="0 1 -.5">
 
         <!--// First floor -->
         <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E" side="double"></a-plane>
