--- a/okar/index.html
+++ b/okar/index.html
@@ -23,8 +23,13 @@
 <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
+	
 	<a-scene embedded artoolkit='sourceType: webcam;'>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+<a-assets>
+<a-asset-item id="toilet-obj" src="images/Toilet.obj"></a-asset-item>
+</a-assets>
+		<a-entity obj-model="obj: #toilet-obj" position="0 0.5 0" rotation="0 0 0" scale=".005 .005 .005" material='opacity: 0.5;'></a-entity>
+		<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 
