--- a/okar/index.html
+++ b/okar/index.html
@@ -17,8 +17,7 @@
 
     </script>
 <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-  </head>
+	  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script></head>
 <body style='margin : 0px; overflow: hidden;'>
 	
 	<a-scene embedded artoolkit='sourceType: webcam;'>
