--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -16,7 +16,7 @@
 
     <a-scene position="0 0 -1.4" vr-mode-ui="enabled: false">
   <a-assets>
-    <a-asset-item id="toilet-obj" src="images/Toilet.obj"></a-asset-item>
+    <a-asset-item id="toilet-obj" src="images/Sofa.obj"></a-asset-item>
   </a-assets>
       
      
