--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -16,7 +16,7 @@
 
     <a-scene position="0 0 -1.4" vr-mode-ui="enabled: false">
   <a-assets>
-    <a-asset-item id="toilet-obj" src="images/Sofa.obj"></a-asset-item>
+    <a-asset-item id="sofa-obj" src="images/Sofa.obj"></a-asset-item>
   </a-assets>
       
      
@@ -41,7 +41,8 @@
         <a-plane position="1 .25 -.37" rotation="0 -90 0" width=".25" height=".5" color="#B6D806" side="double"></a-plane><!--lime right wall-->
         <a-plane position="1 .25 0.63" rotation="0 -90 0" width=".75" height=".5" color="#B6D806" side="double"></a-plane><!--lime right wall-->
         <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806" side="double"></a-plane><!--lime wall-->
-        <a-entity obj-model="obj: #toilet-obj" position="0 0.3 0" rotation="0 0 0" scale=".005 .005 .005"></a-entity>
+
+        <a-entity obj-model="obj: #sofa-obj" position="0 0.3 0" rotation="0 0 0" scale=".0005 .0005 .0005"></a-entity>
         <!--// right wall -->
         <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
 
