--- a/a-test/index.html
+++ b/a-test/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <a-scene>
+      <!-- resize the Cardboard Camera image to 4090px wide and letterbox it to a canvas height of 2048px -->
       <a-sky src="images/casa-meowington-360-VR-1.jpg" rotation="0 -130 0"></a-sky>
 
       <a-text font="kelsonsans" value="The Meowingtons, San Francisco" width="6" position="-2.5 0.25 -1.5"
