--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -19,7 +19,7 @@
     <a-asset-item id="model-obj" src="images/model.obj"></a-asset-item>
     <a-asset-item id="model-mtl" src="images/materials.mtl"></a-asset-item>
     <a-asset-item id="batman-obj" src="images/Batman.obj"></a-asset-item>
-    <a-asset-item id="batman-mtl" src="images/Batman.mtl"></a-asset-item>
+    <a-asset-item id="batman-mtl" src="images/BatmanArmoured.mtl"></a-asset-item>
   </a-assets>
       
      
