--- a/a-partment/index.html
+++ b/a-partment/index.html
@@ -18,7 +18,7 @@
   <a-assets>
     <a-asset-item id="model-obj" src="images/model.obj"></a-asset-item>
     <a-asset-item id="model-mtl" src="images/materials.mtl"></a-asset-item>
-    <a-asset-item id="batman-obj" src="images/Batman.obj"></a-asset-item>
+    <a-asset-item id="batman-obj" src="images/BatmanArmoured.obj"></a-asset-item>
     <a-asset-item id="batman-mtl" src="images/BatmanArmoured.mtl"></a-asset-item>
   </a-assets>
       
