--- a/a-snack/index.html
+++ b/a-snack/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A-Partment - VR Tour of an Apartment</title>
+    <title>A-Snack - Time for something tasty</title>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,7 +23,7 @@
      
 
       <!--// Floor plan scale -->
-      <a-entity id="floorPlan" position="0 1 -.5">
+      <a-entity id="floorPlan" position="0 1.5 -.5">
 
         <!--// First floor -->
         <a-plane position="0 0 0" rotation="-90 0 0" width="3" height="3" color="#FF8C8E" side="double"></a-plane>
