--- a/a-snack/index.html
+++ b/a-snack/index.html
@@ -46,7 +46,7 @@
         <a-plane position="1.25 .25 1" rotation="0 0 0" width=".5" height=".5" color="#B6D806" side="double"></a-plane><!--lime wall-->
 
         <a-entity obj-model="obj: #candy-obj; mtl: #candy-mtl" position="0 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
-        <a-entity obj-model="obj: #donut-obj; mtl: #donut-mtl" position="-1 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
+        <a-entity obj-model="obj: #donut-obj; mtl: #donut-mtl" position="-.3 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
 
         <!--// right wall -->
         <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
