--- a/a-snack/index.html
+++ b/a-snack/index.html
@@ -20,6 +20,8 @@
     <a-asset-item id="candy-mtl" src="images/candycorn.mtl"></a-asset-item>
     <a-asset-item id="donut-obj" src="images/donut.obj"></a-asset-item>
     <a-asset-item id="donut-mtl" src="images/donut.mtl"></a-asset-item>
+    <a-asset-item id="icecream-obj" src="images/icecream.obj"></a-asset-item>
+    <a-asset-item id="icecream-mtl" src="images/icecream.mtl"></a-asset-item>
   </a-assets>
       
      
@@ -47,6 +49,7 @@
 
         <a-entity obj-model="obj: #candy-obj; mtl: #candy-mtl" position="0 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
         <a-entity obj-model="obj: #donut-obj; mtl: #donut-mtl" position="-.3 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
+        <a-entity obj-model="obj: #icecream-obj; mtl: #icecream-mtl" position=".3 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
 
         <!--// right wall -->
         <a-plane position="1.5 .25 -0.25" rotation="0 -90 0" width="2.5" height=".5" color="#82D1F5" side="double"></a-plane><!--cyan left wall-->
