--- a/a-test/internet-health.html
+++ b/a-test/internet-health.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>What's a Porfir.io?</title>
+      <title>Internet Health - Union Square, SF</title>
 <meta property="og:type" content="business.business">
 <meta property="og:title" content="A-Test of A-Frame - WebVR - What's a Porfirio?">
 <meta property="og:url" content="http://porfir.io/a-test">
@@ -21,9 +21,9 @@
 <body>
     <a-scene>
       <!-- resize the Cardboard Camera image to 4090px wide and letterbox it to a canvas height of 2048px -->
-      <a-sky src="images/casa-meowington-360-VR-1.jpg" rotation="0 9.20 0"></a-sky>
+      <a-sky src="images/union-square.jpg" rotation="0 9.20 0"></a-sky>
 
-      <a-text font="kelsonsans" value="The Meowingtons, San Francisco" width="6" position="-1.76 0.47 -2.54"
+      <a-text font="kelsonsans" value="#InternetHealth" width="6" position="-1.76 0.47 -2.54"
               rotation="6.00 22.40 1.20"></a-text>
     </a-scene>
   </body>
