--- a/a-test/internet-health.html
+++ b/a-test/internet-health.html
@@ -3,7 +3,7 @@
   <head>
       <title>Internet Health - Union Square, SF</title>
 <meta property="og:type" content="business.business">
-<meta property="og:title" content="A-Test of A-Frame - WebVR - What's a Porfirio?">
+<meta property="og:title" content="Mozilla in Union Square, SF">
 <meta property="og:url" content="http://porfir.io/a-test">
 <meta property="og:image" content="http://porfir.io/a-test/images/a-test-preview.png">
     <script>
