--- a/ar/index.html
+++ b/ar/index.html
@@ -5,8 +5,12 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
-    <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+
+    <a-assets>
+    <a-asset-item id="fox-obj" src="images/fox.obj"></a-asset-item>
+    <a-asset-item id="fox-mtl" src="images/fox.mtl"></a-asset-item>
+    </a-assets>
+     <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position="0 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' patternUrl='images/mozilla-m.patt'></a-marker-camera>
   </a-scene>
