--- a/ar/index.html
+++ b/ar/index.html
@@ -12,7 +12,8 @@
     </a-assets>
      <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position="0 .3 0" rotation="90 0 0" scale=".8 .8 .8"></a-entity>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera type='pattern' patternUrl='images/mozilla-m.patt'></a-marker-camera>
+    <!-- <a-marker-camera type='pattern' patternUrl='images/mozilla-m.patt'></a-marker-camera> -->
+    <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
 </html>
