--- a/ar/index.html
+++ b/ar/index.html
@@ -12,8 +12,8 @@
     </a-assets>
      <a-entity obj-model="obj: #fox-obj; mtl: #fox-mtl" position="0 0 0" rotation="45 180 0" scale=".4 .4 .4"></a-entity>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera type='pattern' patternUrl='images/mozilla-m.patt'></a-marker-camera>
-    <!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
+    <!-- <a-marker-camera type='pattern' patternUrl='images/mozilla-m.patt'></a-marker-camera> -->
+    <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
 </html>
