--- a/a-test/index.html
+++ b/a-test/index.html
@@ -16,7 +16,7 @@
   ga('send', 'pageview');
 
     </script>
-<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+<script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
   </head>
 <body>
     <a-scene>
