--- a/a-test/goodguys.html
+++ b/a-test/goodguys.html
@@ -20,7 +20,7 @@
   </head>
 <body>
     <a-scene>
-      <!-- resize the Cardboard Camera image to 4090px wide and letterbox it to a canvas height of 2048px -->
+      <!-- resize the Cardboard Camera image to 8192 wide and letterbox it to a canvas height of 4098 -->
       <a-sky src="images/goodguys-4098x8192.jpg" rotation="0 97.20 0"></a-sky>
 
       <a-text font="kelsonsans" value="Goodguys, Pleasanton" width="6" position="-1.76 0.47 -2.54"
