--- a/a-test/goodguys.html
+++ b/a-test/goodguys.html
@@ -3,7 +3,7 @@
   <head>
       <title>Goodguys Car Show - Pleasanton, CA</title>
 <meta property="og:type" content="business.business">
-<meta property="og:title" content="Mozilla in Union Square, SF">
+<meta property="og:title" content="Goodguys Car Show, Pleasanton, CA">
 <meta property="og:url" content="http://porfir.io/a-test">
 <meta property="og:image" content="http://porfir.io/a-test/images/a-test-preview.png">
     <script>
