--- a/a-test/noda.html
+++ b/a-test/noda.html
@@ -23,7 +23,7 @@
       <!-- resize the Cardboard Camera image to 4090px wide and letterbox it to a canvas height of 2048px -->
       <a-sky src="images/noda.jpg" rotation="0 97.20 0"></a-sky>
 
-      <a-text font="kelsonsans" value="Goodguys, Pleasanton" width="6" position="-1.76 0.47 -2.54"
+      <a-text font="kelsonsans" value="NODA" width="6" position="-1.76 0.47 -2.54"
               rotation="6.00 22.40 1.20"></a-text>
     </a-scene>
   </body>
