--- a/a-test/creston.html
+++ b/a-test/creston.html
@@ -23,7 +23,7 @@
       <!-- resize the Cardboard Camera image to 8192 wide and letterbox it to a canvas height of 4098 -->
       <a-sky src="images/creston-apartment.jpg" rotation="0 97.20 0"></a-sky>
 
-      <a-text font="kelsonsans" value="Living Room" width="6" position="-1.76 0.47 -2.54"
+      <a-text font="kelsonsans" value="717 Creston Road" width="6" position="-1.76 0.47 -2.54"
               rotation="6.00 22.40 1.20"></a-text>
     </a-scene>
   </body>
