--- a/a-trailer/index.html
+++ b/a-trailer/index.html
@@ -37,7 +37,7 @@
                autoplay loop crossorigin="anonymous" playsinline webkit-playsinline>
           <!-- MP4 video source. -->
           <source type="video/mp4"
-               src="https://ucarecdn.com/fadab25d-0b3a-45f7-8ef5-85318e92a261/" />
+               src="/Ready-Player-One_360-VR_Title-Sequence.mp4" />
         </video>
       </a-assets>
     </a-scene>
