--- a/index.html
+++ b/index.html
@@ -12,71 +12,20 @@
   ga('send', 'pageview');
 
     </script>
-    <style>
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-}
-* {box-sizing: border-box;}
-.wrapper {
-    border: 2px solid #f76707;
-    border-radius: 5px;
-    background-color: #fff4e6;
-}
-.wrapper > div {
-    border: 2px solid #ffa94d;
-    border-radius: 5px;
-    background-color: #ffd8a8;
-    padding: 1em;
-    color: #d9480f;
-}
-.nested {
-    border: 2px solid #ffec99;
-    border-radius: 5px;
-    background-color: #fff9db;
-    padding: 1em;
-}
-.one {
-  grid-column: 1;
-  grid-row: 1;
-}
-.two { 
-  grid-column: 2;
-  grid-row: 1;
-}
-.three {
-  grid-row: 3;
-  grid-column: 1;
-}
-.four {
-  grid-column: 1;
-  grid-row: 2;
-}
-.five {
-  grid-column: 2;
-  grid-row: 2;
-}
-.six {
-  grid-column: 3;
-  grid-row: 2;
-}
-    </style>
   </head>
 <body>
 <h1>what's a porfir.io?</h1>
 <p>He's hosted with GitHub Pages.</p>
   
-<div class="wrapper">
-  <div class="one">LinkedIn</div>
-  <div class="two">Twitter</div>
-  <div class="three">Instagram</div>
-  <div class="four">CSS Grid</div>
-  <div class="five">A-Frame</div>
-  <div class="six">A-Partment</div>
-</div>  
-  
+<a title="Developers for Firefox"
+   rel="nofollow"
+   href="https://www.mozilla.org/firefox/this-browser-comes-highly-recommended/?utm_source=devs-for.firefox.com&utm_medium=referral&utm_campaign=devs-for-firefox&utm_content=Developers_For_Firefox_Light">
+  <img style="border:0 none;"
+       alt="Developers for Firefox"
+       srcset="//code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light.png,
+               //code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light-2x.png 2x"
+       src="//code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light.png">
+</a>
   
 </body>
 </html>
