--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
   ga('send', 'pageview');
 
     </script>
+    <style>
+    body 
+    { 
+    font: 62.5%/1.5  "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sans-serif; 
+    background: url(/images/wallpaper.png) repeat; 
+    color: #000000;     
+    text-align:center;
+    } 
+
+    #wrapper 
+    {  
+    width:980px;  
+    text-align:left;   
+    margin-left:auto;  
+    margin-right:auto;  
+    background-color: #FFFFFF; 
+    }
+    </style>
   </head>
 <body>
 <h1>what's a porfir.io?</h1>
