--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <body>
 <h1>what's a porfir.io?</h1>
 <p>He's hosted with GitHub Pages.</p>
+  <p>And he uses Firefox...</p>
   
 <a title="Developers for Firefox"
    rel="nofollow"
