--- a/tesla/index.html
+++ b/tesla/index.html
@@ -16,8 +16,9 @@
     body 
     { 
     font: 62.5%/1.5  "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sans-serif; 
-    background: url(/images/wallpaper.png) repeat; 
-    color: #000000;     
+    //background: url(/images/wallpaper.png) repeat; 
+    color: #cfcfd1; 
+    background-color: #2a2a2e;    
     text-align:center;
     } 
 
@@ -27,24 +28,24 @@
     text-align:left;   
     margin-left:auto;  
     margin-right:auto;  
-    background-color: #FFFFFF; 
+    background-color: #38383d; 
     }
     </style>
   </head>
 <body>
-<h1>what's a porfir.io?</h1>
-<p>He's hosted with GitHub Pages.</p>
-  <p>And he uses Firefox...</p>
-  
-<a title="Developers for Firefox"
-   rel="nofollow"
-   href="https://www.mozilla.org/firefox/this-browser-comes-highly-recommended/?utm_source=devs-for.firefox.com&utm_medium=referral&utm_campaign=devs-for-firefox&utm_content=Developers_For_Firefox_Light">
-  <img style="border:0 none;"
-       alt="Developers for Firefox"
-       srcset="//code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light.png,
-               //code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light-2x.png 2x"
-       src="//code.cdn.mozilla.net/for-firefox/badges/assets/Developers_For_Firefox_Light.png">
-</a>
-  
+<h1>&nbsp;</h1>
+<div id="wrapper">
+
+<div style="border:solid 1px #cfcfd1; width:980px; padding:10px; text-align:center; background-color:#38383d;">
+<form method="get" action="http://www.google.com/search">
+
+<input type="text" name="q" size="25" style="color:#cfcfd1; background-color:#38383d; border:0; width:900px; font-size:16px;" maxlength="255" value="Search the Web"
+onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white';" onblur="if(this.value=='')this.value=this.defaultValue; "/>
+<input type="submit" value="Go!" style="color:#cfcfd1; border:0; font-size:16px; background-color:#38383d;" />
+
+</form>
+</div>
+
+</div>
 </body>
 </html>
