--- a/tesla/index.html
+++ b/tesla/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>What's a Porfir.io?</title>
+    <title>Tesla Start Page by @porfitron</title>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -50,7 +50,7 @@
   </head>
 <body>
 <div style="position: fixed; top: 0px; width:100%; height: 50px; text-align:left;background-color: #2a2a2e;">
-<img style="margin:15px;" src="images/tesla-wordmark.png" width="10%" border="0" />
+<a href="https://tesla.com"><img style="margin:15px;" src="images/tesla-wordmark.png" width="10%" border="0" /></a>
 </div>
 
 <h1>&nbsp;</h1>
