--- a/tesla/index.html
+++ b/tesla/index.html
@@ -39,7 +39,7 @@
   left: 0px;
   right: 0px;
   height: 60px;
-  border-top: solid 1px #cfcfd1;
+  //border-top: solid 1px #cfcfd1;
   margin-bottom: 0px;
   padding-top:15px;
   font-size: 14px;
@@ -73,10 +73,10 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 <table width="100%" border="0" cellpadding="0" cellspacing="0" border="0" style="border:0;" cols="2">
 <tr>
 <td width="50%">
-<a class="twitter-timeline" data-width="400" data-height="600" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/Tesla?ref_src=twsrc%5Etfw">Tesla Motors</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<a class="twitter-timeline" data-width="400" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/Tesla?ref_src=twsrc%5Etfw">Tesla Motors</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </td>
 <td width="50%">
-<a class="twitter-timeline" data-width="400" data-height="600" data-theme="dark" data-link-color="#F5F8FA" href="https://twitter.com/ElonMusk?ref_src=twsrc%5Etfw">Elon Musk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<a class="twitter-timeline" data-width="400" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/ElonMusk?ref_src=twsrc%5Etfw">Elon Musk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </td>
 </tr>
 </table>
