Updates for Chromium
Optimized code for Chromium build of model 3 browser and added tiles
for Duck Hunt JS, Weather Underground, Teslarati and Tesla Model 3
group on Facebook.

--- a/tesla/index.html
+++ b/tesla/index.html
@@ -50,7 +50,7 @@
   </head>
 <body>
 <div style="position: fixed; top: 0px; width:100%; height: 50px; text-align:left;background-color: #2a2a2e;">
-<a href="https://tesla.com"><img style="margin:15px;" src="images/tesla-wordmark.png" width="10%" border="0" /></a>
+<a href="https://tesla.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img style="margin:15px;" src="images/tesla-wordmark.png" width="10%" border="0" /></a>
 </div>
 
 <h1>&nbsp;</h1>
@@ -66,17 +66,23 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 </form>
 </div>
 
-<h1>&nbsp;</h1>
+<p>
+<a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
+<a href="http://wunderground.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
+<a href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslarati.png" border="0" style="padding:8px;" /></a> 
+<a href="https://m.facebook.com/groups/TeslaMotorsModel3/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslafb.png" border="0" style="padding:8px;" /></a> 
+</p>
+
 <p style="font-size:14px; font-weight:bold;">The latest on Twitter...</p>
 
 <div style="text-align:center;">
 <table width="100%" border="0" cellpadding="0" cellspacing="0" border="0" style="border:0;" cols="2">
 <tr>
 <td width="50%">
-<a class="twitter-timeline" data-width="320" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/Tesla?ref_src=twsrc%5Etfw">Tesla Motors</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<a class="twitter-timeline" data-width="480" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/Tesla?ref_src=twsrc%5Etfw">Tesla Motors</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </td>
 <td width="50%">
-<a class="twitter-timeline" data-width="320" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/ElonMusk?ref_src=twsrc%5Etfw">Elon Musk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<a class="twitter-timeline" data-width="480" data-height="550" data-theme="dark" data-link-color="#fff" href="https://twitter.com/ElonMusk?ref_src=twsrc%5Etfw">Elon Musk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </td>
 </tr>
 </table>
@@ -85,7 +91,7 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 </div>
 
 <div id="footer">
-  <a href="https://firefox.com"><img src="images/firefox-logo-glyph.png" height="40" width="40" border="0" style="vertical-align:middle;" /></a>&nbsp;
+  <a href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/firefox-logo-glyph.png" height="40" width="40" border="0" style="vertical-align:middle;" /></a>&nbsp;
   If you like this start page, consider getting <a style="color:#fff;" href="https://firefox.com">Firefox</a> on your PC, Mac, Mobile or Fire TV. 
   Page by <a href="https://twitter.com/porfitron" style="color:#fff;">@porfitron</a>.
 </div>
