--- a/tesla/index.html
+++ b/tesla/index.html
@@ -92,7 +92,7 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 
 <div id="footer">
   <a href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/firefox-logo-glyph.png" height="40" width="40" border="0" style="vertical-align:middle;" /></a>&nbsp;
-  If you like this start page, consider getting <a style="color:#fff;" href="https://firefox.com">Firefox</a> on your PC, Mac, Mobile or Fire TV. 
+  If you like this start page, consider getting <a style="color:#fff;" href="https://www.mozilla.org/firefox/new/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github">Firefox</a> on your PC, Mac, Mobile or Fire TV. 
   Page by <a href="https://twitter.com/porfitron" style="color:#fff;">@porfitron</a>.
 </div>
 
