--- a/tesla/index.html
+++ b/tesla/index.html
@@ -71,7 +71,8 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 <a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
 <a id="weather" href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
 <a href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslarati.png" border="0" style="padding:8px;" /></a> 
-<a href="https://m.facebook.com/groups/TeslaMotorsModel3/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslafb.png" border="0" style="padding:8px;" /></a> 
+<a href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslanews.png" border="0" style="padding:8px;" /></a> 
+<a href="https://github.com/porfitron/porfitron.github.io/tree/master/tesla"><img src="images/tile-github.png" border="0" style="padding:8px;" /></a> 
 </p>
 
 <p style="font-size:14px; font-weight:bold;">The latest on Twitter...</p>
