--- a/tesla/index.html
+++ b/tesla/index.html
@@ -70,7 +70,10 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 <p>
 <a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
 <a href="https://play2048.co/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-2048.png" border="0" style="padding:8px;" /></a> 
+<a href="https://play.famobi.com/solitaire-legend/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_solitairelegend.png" border="0" style="padding:8px;" /></a> 
+<a href="https://play.famobi.com/archery-world-tour/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_archery.png" border="0" style="padding:8px;" /></a> 
 <a id="weather" href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
+<a href="http://www.kinetic.com/teslascreens/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_kinetic.png" border="0" style="padding:8px;" /></a> 
 <a href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslarati.png" border="0" style="padding:8px;" /></a> 
 <a href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslanews.png" border="0" style="padding:8px;" /></a> 
 <a href="https://github.com/porfitron/porfitron.github.io/tree/master/tesla"><img src="images/tile-github.png" border="0" style="padding:8px;" /></a> 
