--- a/tesla/index.html
+++ b/tesla/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <title>Tesla Start Page by @porfitron</title>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99747601-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-99747601-1', 'auto');
-  ga('send', 'pageview');
-
-    </script>
+  gtag('config', 'UA-99747601-1');
+</script>
     <style>
     body 
     { 
@@ -70,13 +69,13 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 <p>
 <a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
 <!-- <a href="https://play2048.co/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-2048.png" border="0" style="padding:8px;" /></a> -->
+<a href="https://www.abettertheater.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-theater.png" border="0" style="padding:8px;" /></a> 
 <a href="https://play.famobi.com/solitaire-legend/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_solitairelegend.png" border="0" style="padding:8px;" /></a> 
 <a href="https://play.famobi.com/archery-world-tour/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_archery.png" border="0" style="padding:8px;" /></a> 
 <a id="weather" href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
 <a href="http://www.kinetic.com/teslascreens/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_kinetic.png" border="0" style="padding:8px;" /></a> 
 <a href="http://teslarati.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslarati.png" border="0" style="padding:8px;" /></a> 
-<a href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslanews.png" border="0" style="padding:8px;" /></a> 
-<a href="https://github.com/porfitron/porfitron.github.io/tree/master/tesla"><img src="images/tile-github.png" border="0" style="padding:8px;" /></a> 
+<a href="https://news.google.com/search?q=tesla&utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-teslanews.png" border="0" style="padding:8px;" /></a>
 </p>
 
 <p style="font-size:14px; font-weight:bold;">The latest on Twitter...</p>
