--- a/tesla/index.html
+++ b/tesla/index.html
@@ -69,7 +69,7 @@ onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='white
 <p>
 <a href="http://duckhuntjs.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-duckhuntjs.png" border="0" style="padding:8px;" /></a> 
 <!-- <a href="https://play2048.co/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-2048.png" border="0" style="padding:8px;" /></a> -->
-<a href="https://www.abettertheater.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-theater.png" border="0" style="padding:8px;" /></a> 
+<a href="https://www.abettertheater.com/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_theater.png" border="0" style="padding:8px;" /></a> 
 <a href="https://play.famobi.com/solitaire-legend/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_solitairelegend.png" border="0" style="padding:8px;" /></a> 
 <a href="https://play.famobi.com/archery-world-tour/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile_archery.png" border="0" style="padding:8px;" /></a> 
 <a id="weather" href="https://weather.com/weather/today/l/?utm_source=tesla&utm_medium=browser&utm_campaign=custom_start_page&utm_content=porfitron_github"><img src="images/tile-weather.png" border="0" style="padding:8px;" /></a> 
