--- a/casa.html
+++ b/casa.html
@@ -13,7 +13,7 @@
 </script>
     
   </head>
-  <body style="background-color:#000;color:#fff;font-face:Arial,Helvetica;">
+  <body style="background-color:#000;color:#fff;font-family:Arial, Helvetica, sans-serif;">
     
     <h1>Cow Hollow / Web Cam</h1>
     <p>North on Baker Street</p>
