--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </style>
   </head>
 <body>
+
+<!-- // Old Code
 <h1>what's a porfir.io?</h1>
 <p>He's hosted with GitHub Pages.</p>
   <p>And posts stuff on Instagram...</p>
@@ -92,6 +94,8 @@
 <script async src="//www.instagram.com/embed.js"></script>
     
   </div>
+
+End old Code //-->
   
 </body>
 </html>
