--- a/betsie/index.html
+++ b/betsie/index.html
@@ -12,11 +12,12 @@
         <div>
             <h1>Betsie – Social Predictions</h1>
 
-            <h2>Make “I told you so” fun!</h2>
+            <h2>Make a game out of being right</h2>
+
+            <h3>Track bets with friends, start keeping score.</h3>
             
-            <p>Create fun and connection by betting your friends and family on life’s big - and little - moments.<br />
-            You set the stakes and the timeframe and Betsie lets you share the results to social so your circle knows.
-            </p>
+            <p>Make a game out of being right. Track bets with friends–Everything from the petty to the profound is fair game. Set the stakes, and keep score of who comes out on top.</p>
+
             <h2>You totally called it!</h2>
 
             <h3>Bet on Anything, Like:</h3>
