--- a/betsie/about_us.html
+++ b/betsie/about_us.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Betsie - About Us</title>
+    <!-- Import Montserrat Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+    
+    <!-- Inline CSS using element selectors (since class attributes are forbidden) -->
+    <style>
+        /* Set the default font for the entire body */
+        body {
+            font-family: 'Montserrat', sans-serif; /* Montserrat with safe fallback */
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1, h2, h3 {
+            font-weight: 700;
+            color: #333; 
+        }
+        ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+        a {
+            color: #F36D6F; /* Updated link color */
+            text-decoration: none;
+            padding: 5px 10px;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
+    <!-- Added: Simple navigation back to the homepage -->
+    <p><a href="index.html" style="font-weight: 700;">&lt;&lt; Back to Home</a></p>
 
     <div>
-        <h1>Betsie – About Us</h1>
+        <h1>About Betsie</h1>
         <p>Last Updated: November 17, 2025</p>
 
         <h2>The Origin Story</h2>
@@ -23,11 +53,11 @@
                 <li>B2B and B2C Tech executive</li>
                 <li>20+ experience in high tech products</li>
                 <li>Held senior design and marketing positions at Unity and BAE Systems</li>
-                <li>Expert in design, creative strategy, marketing, go-to-market, SaaS, freemium</li>
+                <li>Expert in design, creative strategy, marketing, go-to-market, commercialization, SaaS, freemium</li>
                 <li>IPO experience with Unity Technologies (NYSE: U, Sept 2020)</li>
             </ul>
             <p>
-                <a href="https://www.linkedin.com/in/katrinastrafford/" target="_new">View Profile on LinkedIn >></a>
+                <a href="#">View Profile on LinkedIn >></a>
             </p>
         </div>
 
@@ -43,7 +73,7 @@
                 <li>IPO experience with Unity Technologies (NYSE: U, Sept 2020)</li>
             </ul>
             <p>
-                <a href="https://www.linkedin.com/in/laetitiasantore/" target="_new">View Profile on LinkedIn >></a>
+                <a href="#">View Profile on LinkedIn >></a>
             </p>
         </div>
 
